feat :sparkles: HTML and CSS corrections

--- a/index.html
+++ b/index.html
@@ -19,6 +19,19 @@
                 <h1 class="nombre_angel">Angel Niño Davila</h1>
                 <p class="rol_angel">Desarrollador de Software</p>
             </div>
+
+        <main class="contenido_principal">
+            <section class="bloque_seccion">
+                <h2 class="titulo_bloque">Perfil Profesional</h2>
+                <p class="texto_sobre_mi">
+                    Desarrollador de software con experiencia en el diseño, desarrollo e implementación
+                    de soluciones tecnológicas robustas y escalables. Comprometido con la excelencia técnica
+                    y la entrega de productos de software de alta calidad, con enfoque en las mejores prácticas
+                    y la mejora continua.
+                </p>
+            </section>
+
+        </main>
         </header>
     </div>
 </body>
