feat :sparkles: HTML advances in skill

--- a/index.html
+++ b/index.html
@@ -30,6 +30,68 @@
                     y la mejora continua.
                 </p>
             </section>
+            <div class="separador_linea"></div>
+            <section class="bloque_seccion">
+                <h2 class="titulo_bloque">Competencias Técnicas</h2>
+                <div class="lista_habilidades">
+                    <div class="item_habilidad">Python</div>
+                    <div class="item_habilidad">Scrum</div>
+                    <div class="item_habilidad">HTML / CSS</div>
+                    <div class="item_habilidad">JavaScript / TypeScript</div>
+                    <div class="item_habilidad">Git / Control de versiones</div>
+                    <div class="item_habilidad">SQL / Bases de datos</div>
+                    <div class="item_habilidad">MongoDB</div>
+                    <div class="item_habilidad">Node.js</div>
+                </div>
+            </section>
+            <div class="separador_linea"></div>
+            <section class="bloque_seccion">
+                <h2 class="titulo_bloque">Proyectos Destacados</h2>
+                <div class="rejilla_proyectos">
+
+                    <article class="tarjeta_proyecto">
+                        <h3 class="titulo_proyecto">Simulador de Gastos Diarios</h3>
+                        <p class="descripcion_proyecto">
+                            Aplicación de consola en Python para gestionar gastos personales: registrar, visualizar,
+                            filtrar y generar reportes persistentes en JSON.
+                        </p>
+                        <div class="tecnologias_proyecto">
+                            <span class="etiqueta_tec">Python</span>
+                        </div>
+                        <a href="https://github.com/angeldavila00/Proyecto_S2_Python_NinoAngel" class="enlace_proyecto"
+                            target="_blank">Ver en GitHub →</a>
+                    </article>
+
+                    <article class="tarjeta_proyecto">
+                        <h3 class="titulo_proyecto">Kario Media</h3>
+                        <p class="descripcion_proyecto">
+                            Aplicación web que muestra casos de estudio basados en historias de usuario para analizar
+                            requerimientos ante la DIAN.
+                        </p>
+                        <div class="tecnologias_proyecto">
+                            <span class="etiqueta_tec">HTML</span>
+                            <span class="etiqueta_tec">CSS</span>
+                        </div>
+                        <a href="https://github.com/angeldavila00/PROYECTO-FILTRO_NINOANGEL_RAMIREZALAN1"
+                            class="enlace_proyecto" target="_blank">Ver en GitHub →</a>
+                    </article>
+
+                    <article class="tarjeta_proyecto">
+                        <h3 class="titulo_proyecto">Proyecto MongoDB 2: Campus Music</h3>
+                        <p class="descripcion_proyecto">
+                            Migración de la gestión de datos de Campus Music a MongoDB. Incluye diseño de modelo,
+                            inserción de datos, consultas analíticas y transacciones.
+                        </p>
+                        <div class="tecnologias_proyecto">
+                            <span class="etiqueta_tec">JavaScript</span>
+                            <span class="etiqueta_tec">MongoDB</span>
+                        </div>
+                        <a href="https://github.com/angeldavila00/Proyecto_MongoDB2_NinoAngel" class="enlace_proyecto"
+                            target="_blank">Ver en GitHub →</a>
+                    </article>
+
+                </div>
+            </section>
 
         </main>
         </header>
