feat :sparkles: CSS and HTML endings

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Angel Niño - Portafolio</title>
+    <title>Angel Niño Davila - Desarrollador de Software</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div class="cv_principal">
         <header class="encabezado_principal">
@@ -19,6 +21,7 @@
                 <h1 class="nombre_angel">Angel Niño Davila</h1>
                 <p class="rol_angel">Desarrollador de Software</p>
             </div>
+        </header>
 
         <main class="contenido_principal">
             <section class="bloque_seccion">
@@ -30,7 +33,9 @@
                     y la mejora continua.
                 </p>
             </section>
+
             <div class="separador_linea"></div>
+
             <section class="bloque_seccion">
                 <h2 class="titulo_bloque">Competencias Técnicas</h2>
                 <div class="lista_habilidades">
@@ -44,7 +49,9 @@
                     <div class="item_habilidad">Node.js</div>
                 </div>
             </section>
+
             <div class="separador_linea"></div>
+
             <section class="bloque_seccion">
                 <h2 class="titulo_bloque">Proyectos Destacados</h2>
                 <div class="rejilla_proyectos">
@@ -93,8 +100,33 @@
                 </div>
             </section>
 
+            <div class="separador_linea"></div>
+
+            <section class="bloque_seccion">
+                <h2 class="titulo_bloque">Información de Contacto</h2>
+                <div class="lista_contacto">
+                    <div class="item_contacto">
+                        <span class="contacto_label">Correo Electrónico</span>
+                        <a href="mailto:angeldavila0975@gmail.com" class="contacto_valor">angeldavila0975@gmail.com</a>
+                    </div>
+
+                    <div class="item_contacto">
+                        <span class="contacto_label">Teléfono</span>
+                        <a href="tel:+573057541919" class="contacto_valor">+57 305 754 1919</a>
+                    </div>
+
+                    <div class="item_contacto">
+                        <span class="contacto_label">GitHub</span>
+                        <a href="https://github.com/angeldavila00" target="_blank"
+                            class="contacto_valor">github.com/angeldavila00</a>
+                    </div>
+                </div>
+            </section>
         </main>
-        </header>
+
+        <footer class="pie_pagina">
+            <p>&copy; 2025 Angel Niño Davila. Todos los derechos reservados.</p>
+        </footer>
     </div>
 </body>
 </html>
